buildscript {
    ext {
        springBootVersion = '2.7.18'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

jar {
    enabled = false
}

java {
    sourceCompatibility = 17
    targetCompatibility = 17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-actuator')
    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
    implementation('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml')
    implementation('org.apache.httpcomponents:httpclient')
    implementation('org.springframework.data:spring-data-commons')

    compileOnly('org.projectlombok:lombok')
    runtimeOnly('org.webjars:webjars-locator-core')
    runtimeOnly('org.webjars:bootstrap:5.3.2')
    runtimeOnly('org.springframework.boot:spring-boot-devtools')

    testImplementation('junit:junit')
    testImplementation('org.assertj:assertj-core')
    testImplementation('org.mockito:mockito-core')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    testCompileOnly('org.projectlombok:lombok')

    annotationProcessor('org.projectlombok:lombok')
    testAnnotationProcessor('org.projectlombok:lombok')
}

bootRun {
    systemProperties System.properties
}
